tests/ui/feature-gates/feature-gate-exclusive-range-pattern.stderr
error[E0658]: exclusive range pattern syntax is experimental
  --> $DIR/feature-gate-exclusive-range-pattern.rs:3:9
   |
LL |         0 .. 3 => {}
   |         ^^^^^^
   |
   = note: see issue #37854 <https://github.com/crablang/crablang/issues/37854> for more information
   = help: add `#![feature(exclusive_range_pattern)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `crablangc --explain E0658`.
